--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,12 @@
 
-body {
-    text-align: center;
+
+header {
+    background-color: #000000;
+    line-height: 100px;
+    height: 100px;
+    padding: 0 1em;
+    color: #545454;
+
 }
 
 nav {
