ヘッダーのデザイン変更 bgcを変更

--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,11 @@
 
 
 header {
-    background-color: #000000;
+    background-color:#545454;
     line-height: 100px;
     height: 100px;
     padding: 0 1em;
-    color: #545454;
+    color: #fff;
 
 }
 
