--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,8 @@
 
+html,body {
+    margin: 0;
+}
+
 
 header {
     background-color:#545454;
@@ -6,7 +10,10 @@ header {
     height: 100px;
     padding: 0 1em;
     color: #fff;
+}
 
+header h1 {
+    margin: 0;
 }
 
 nav {
